adding austingfraser end point, rename to name style unification
